# NewsGuardX

./: Data_Insertion_In_AuraDBNeo4j.py  README.md  app.py  crewai_flow.html  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  vercel.json
src/causalitynet/: main.py
src/causalitynet/crews/causal_agents/Causal_Crew/: Causal_Crew.py
src/causalitynet/crews/causal_agents/Causal_Crew/config/: causal_agents.yaml  causal_tasks.yaml
src/causalitynet/crews/causal_agents/Evaluation_Crew/: Evaluation_Crew.py
src/causalitynet/crews/causal_agents/Evaluation_Crew/config/: evaluation_agents.yaml  evaluation_tasks.yaml
src/causalitynet/crews/causal_agents/FactChecking_Crew/: FactChecking_Crew.py
src/causalitynet/crews/causal_agents/FactChecking_Crew/config/: facts_agents.yaml  facts_tasks.yaml
src/causalitynet/tools/: custom_tool.py
